test/interop/C/exportArray/returningArr/returnBadArray-multiRank.good
returnBadArray-multiRank.chpl:3: error: cannot return an array with rank != 1
